# llm-council

./: README.md  pyproject.toml  start.sh
backend/: database.py  main.py  requirements.txt  schemas.py
backend/api/: __init__.py  conversation_routes.py  routes.py  websocket.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  model-card.tsx  settings-popover.tsx
frontend/components/council/: advanced-options.tsx  aggregation-results.tsx  aggregation-selector.tsx  anonymization-toggle.tsx  chairman-selector.tsx  custom-role-editor.tsx  index.ts  model-selector.tsx  output-mode-selector.tsx  peer-review-toggle.tsx  pipeline-visualizer.tsx  stage-configurator.tsx
frontend/components/ui/: sidebar.tsx
frontend/lib/: api.ts  format.ts  utils.ts
src/llm_council/: __init__.py  config.py  council.py  exceptions.py  logging.py  peer_review.py  peer_review_orchestrator.py  prompts.py
src/llm_council/analysis/: __init__.py  agreement.py  bradley_terry.py  elo.py
src/llm_council/anonymization/: __init__.py  core.py
src/llm_council/providers/: __init__.py  base.py  openrouter.py
src/llm_council/roles/: __init__.py  registry.py  role.py
